# Image-Classification-on-modified-ResNet

./: .gitignore  ImageClassificationWithModifiedResNet.ipynb  README.md
ResNet50_inference/: CMakeLists.txt  create_dataset.py  dataset.csv  inference_results.csv  labels.txt  main.cpp  sample_dataset.csv
